--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -25,7 +25,7 @@
 .cards .card {
     width: 25%;
     min-width: 300px;
-    height: 40vh;
+    height: 45vh;
     padding: 1rem;
     margin: 0.5rem;
     background-color: var(--secondary-container-color);
@@ -37,6 +37,18 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.card-body ul {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10%;
+    list-style: none;
+    padding-left: 0;
+}
+
+.card-body ul li{
+    width: 9rem;
 }
 
 .card .btn {
