--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -22,7 +22,7 @@
 
 
 .introduction-img {
-    max-width: 70%;
+    width: 35%;
     margin: 2rem 2rem 1rem 2rem;
     border-radius: 8vmin;
     object-fit: cover;
@@ -42,7 +42,6 @@
 }
 
 .about-me {
-    margin-top: 25vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +50,7 @@
 
 .about-me h2 {
     font-size: 3.5rem;
-    font-family: "Roboto Condensed";
+    font-family: "Roboto Condensed", "sans-serif";
 }
 
 .about-me p {
@@ -63,16 +62,34 @@
     margin-left: 0;
 }
 
-.experience {
-    margin-top: 30vh;
+
+.highlighted-work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.highlighted-work h2{
+    font-size: 3.5rem;
+    font-family: "Roboto Condensed", "sans-serif";
+}
+
+.technologies {
     text-align: center;
 }
 
-.experience h2{
+.technologies h2{
     font-size: 3.5rem;
-    font-family: "Roboto Condensed";
+    font-family: "Roboto Condensed", "sans-serif";
 }
 
-.experience p {
+.technologies p {
     font-size: 1.5rem;
+}
+
+.experience h2 {
+    text-align: center;
+    font-size: 3.5rem;
+    font-family: "Roboto Condensed", "sans-serif";
 }
