--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -8,11 +8,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 85%;
+    width: 90%;
 }
 
 .experience-content img {
-    max-width: 50vw;
     height: 50vh;
     object-fit: cover;
     margin: 2rem;
@@ -22,4 +21,38 @@
 .experience-content p {
     max-width: 700px;
     font-size: 1.4rem;
+}
+
+/*Responsitivity*/
+@media (max-width: 1300px) {
+    .experience-content img {
+        width: 30vw;
+        height: 40vh;
+    }
+}
+
+@media (max-width: 1000px) {
+    .experience-content img {
+        width: 60vw;
+        height: 40vh;
+    }
+
+    .experience-content {
+        flex-direction: column;
+    }
+
+    .experience-content p {
+        font-size: 1.3rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .experience-content img {
+        height: 20vh;
+    }
+
+    .experience-container .my-btn {
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+    }
 }
