--- a/src/components/imgCarousel.css
+++ b/src/components/imgCarousel.css
@@ -1,14 +1,37 @@
-.carousel {
-    top: -88px;
-}
-
 .carousel-item {
     text-align: center;
-
 }
 
 .carousel-item img{
     width: 100vw;
     height: 80vh;
     object-fit: cover;
+}
+
+@media (max-width: 1350px) {
+    .carousel-item img {
+        height: 60vh;    
+    }
+}
+
+@media (max-width: 1000px) {
+    .carousel-item img {
+        height: 40vh;    
+    }
+}
+
+@media (max-width: 600px) {
+    .carousel-item img {
+        height: 25vh;
+    }
+}
+@media (max-width: 450px) {
+    .carousel-item img {
+        height: 20vh;
+    }
+}
+@media (max-width: 350px) {
+    .carousel-item img {
+        height: 15vh;
+    }
 }
