--- a/src/pages/aboutPage.css
+++ b/src/pages/aboutPage.css
@@ -14,8 +14,83 @@
     align-items: center;
 }
 
-.about-container p {
+.about-container p:first-child {
     width: 65%;
     font-size: 2rem;
     margin: 2rem;
+}
+
+.interests-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 70%;
+}
+
+.interest {
+    padding: 1rem;
+}
+
+.interest img {
+    height: 250px;
+    width: 250px;
+    object-fit: cover;
+    border-radius: 3vmin;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+}
+
+.interest p {
+    font-size: 1.2rem;
+    font-style: italic;
+    margin: 0.2rem 0 0 0.8rem;
+    align-self: flex-start;
+    color: var(--secondary-color);
+    opacity: 0.6;
+}
+
+
+@media (max-width: 1300px) {
+    .about-container p:first-child {
+        font-size: 1.8rem;
+    }
+
+.interests-container {
+    flex-direction: column;
+}
+
+.interest img {
+    height: 350px;
+    width: 500px;
+}
+}
+
+@media (max-width: 1000px) {
+    .about-container p:first-child {
+    width: 90%
+    }
+}
+
+@media (max-width: 700px) {
+    .about-container p:first-child {
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 550px) {
+    .interest img {
+        height: 350px;
+        width: 85vw;
+    }
+}
+
+
+@media (max-width: 400px) {
+    .about-container p:first-child {
+        font-size: 1.3rem;
+    }
+
+    .interest img {
+        height: 200px;
+    }
 }
