--- a/src/pages/homePage.css
+++ b/src/pages/homePage.css
@@ -22,7 +22,7 @@
 
 
 .introduction-img {
-    width: 35%;
+    width: 40%;
     margin: 2rem 2rem 1rem 2rem;
     border-radius: 8vmin;
     object-fit: cover;
@@ -54,8 +54,9 @@
 }
 
 .about-me p {
-    max-width: 70%;
-    font-size: 1.8rem;
+    max-width: 90%;
+    width: 50%;
+    font-size: 1.6rem;
 }
 
 .about-me .my-btn {
@@ -71,8 +72,10 @@
 }
 
 .highlighted-work h2{
+    text-align: center;
     font-size: 3.5rem;
     font-family: "Roboto Condensed", "sans-serif";
+    padding: 0 1rem;
 }
 
 .technologies {
@@ -92,4 +95,80 @@
     text-align: center;
     font-size: 3.5rem;
     font-family: "Roboto Condensed", "sans-serif";
+}
+
+/*Responsitivity*/
+@media (max-width:1080px) {  
+    
+    /*Hero section*/
+    .hero h1 {
+        font-size: 4rem;
+    }
+
+    .hero span {
+        font-size: 3.5rem;
+    }
+
+
+    .introduction-img {
+        width: 50%;    
+    }
+
+    .link-container {
+        gap: 0.5rem;
+    }
+
+    /*About me section*/
+    .about-me h2 {
+        font-size: 3rem;
+    }
+
+    .about-me p {
+        width: 90%;
+        font-size: 1.4rem;
+    }
+}
+
+@media (max-width: 820px) {
+    .introduction-img {
+        width: 65%;
+    }
+}
+
+
+@media (max-width: 420px) {
+
+    /*Hero section*/
+    .hero {
+        margin-top: 5vh;
+    }
+
+    .hero h1 {
+        font-size: 3.5rem;
+    }
+
+    .hero span {
+        font-size: 2.5rem;
+    }
+
+
+    .introduction-img {
+        width: 80%;
+    }
+
+    .link-container {
+        gap: 0.5rem;
+    }
+
+    /*About me section*/
+    .header-space {
+        padding: 0 0 !important;
+    }
+
+    .about-me h2 {
+        font-size: 2.5rem;
+    }
+    .about-me p {
+        font-size: 1.5rem;
+    }
 }
