Changed issue where Roboro Thin didn't display as font doesn't exist. Changed font weight to 300 to emulate thin font.

--- a/src/components/techItem.css
+++ b/src/components/techItem.css
@@ -8,7 +8,7 @@
 
 .category-container h2 {
     font-size: 3rem;
-    font-family: "Roboto Thin", "sans serif";
+    font-weight: 300;
 }
 
 .techItem-container {
